syntax = "proto3";

package Contracts.Services.Payment.Protobuf;

import "Abstractions/Abstractions.proto";

service PaymentService {
  rpc GetPayment(GetPaymentRequest) returns (Abstractions.Protobuf.GetResponse);
}

// Requests

message GetPaymentRequest {
  string PaymentId = 1;
}

// Projections

message Payment { 
   string Id = 1;
   string OrderId = 2;
   double Amount = 3;
   string Status = 4;
   Abstractions.Protobuf.Address Address = 5;
   repeated Abstractions.Protobuf.PaymentMethod PaymentMethods = 6;
}
